tests/ui/feature-gates/feature-gate-cfg-target-has-reliable-f16-f128.stderr
error[E0658]: `cfg(target_has_reliable_f16)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-reliable-f16-f128.rs:4:10
   |
LL |     cfg!(target_has_reliable_f16);
   |          ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(cfg_target_has_reliable_f16_f128)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `cfg(target_has_reliable_f16_math)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-reliable-f16-f128.rs:6:10
   |
LL |     cfg!(target_has_reliable_f16_math);
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(cfg_target_has_reliable_f16_f128)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `cfg(target_has_reliable_f128)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-reliable-f16-f128.rs:8:10
   |
LL |     cfg!(target_has_reliable_f128);
   |          ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(cfg_target_has_reliable_f16_f128)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `cfg(target_has_reliable_f128_math)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-reliable-f16-f128.rs:10:10
   |
LL |     cfg!(target_has_reliable_f128_math);
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(cfg_target_has_reliable_f16_f128)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
